# charts-rs-web

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh
.github/: publish.yml
.github/workflows/: publish.yml
assets/: build_date  commit
configs/: default.yml  dev.yml
src/: asset.rs  dist.rs  error.rs  main.rs
src/config/: app_config.rs  mod.rs
src/controller/: mod.rs
src/middleware/: mod.rs  stats.rs
src/util/: http.rs  mod.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.css  App.tsx  main.tsx
