[package]
name = "charts-rs-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-client-ip = "0.6.0"
charts-rs = { version = "0.3.7", features = ["image-encoder"] }
chrono = "0.4.38"
config = { version = "0.14.0", features = ["yaml"] }
glob = "0.3.1"
hex = "0.4.3"
http-body-util = "0.1.1"
hyper = "1.3.1"
image = "0.25.1"
imagequant = { version = "4.3.1", default-features = false }
lodepng = "3.10.1"
mime = "0.3.17"
once_cell = "1.19.0"
rgb = "0.8.37"
rust-embed = { version = "8.3.0", features = ["mime-guess", "compression"] }
serde = "1.0.199"
serde_json = "1.0.116"
snafu = "0.8.2"
time = "0.3.36"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.2", features = [
    "compression-gzip",
    "compression-zstd",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
urlencoding = "2.1.3"
validator = { version = "0.18.1", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
