[package]
name = "charts-rs-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-client-ip = "0.6.0"
charts-rs = { version = "0.3.17", features = ["image-encoder"] }
chrono = "0.4.38"
config = { version = "0.14.0", features = ["yaml"] }
glob = "0.3.1"
hex = "0.4.3"
http-body-util = "0.1.2"
image = "0.25.2"
imagequant = { version = "4.3.3", default-features = false }
lodepng = "3.10.4"
mime = "0.3.17"
once_cell = "1.19.0"
rgb = "0.8.48"
rust-embed = { version = "8.5.0", features = ["mime-guess", "compression"] }
serde = "1.0.207"
serde_json = "1.0.125"
snafu = "0.8.4"
substring = "1.4.5"
time = "0.3.36"
tokio = { version = "1.39.2", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tower = { version = "0.5.0", features = ["timeout"] }
tower-http = { version = "0.5.2", features = [
    "compression-gzip",
    "compression-zstd",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
urlencoding = "2.1.3"
validator = { version = "0.18.1", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
