[package]
name = "charts-rs-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
axum-client-ip = "0.7.0"
charts-rs = { version = "0.3.23", features = ["image-encoder"] }
chrono = "0.4.41"
config = { version = "0.15.11", features = ["yaml"] }
glob = "0.3.2"
hex = "0.4.3"
http-body-util = "0.1.3"
image = "0.25.6"
imagequant = { version = "4.3.4", default-features = false }
lodepng = "3.11.0"
mime = "0.3.17"
once_cell = "1.21.3"
rgb = "0.8.50"
rust-embed = { version = "8.7.2", features = ["mime-guess", "compression"] }
serde = "1.0.219"
serde_json = "1.0.140"
snafu = "0.8.6"
substring = "1.4.5"
time = "0.3.41"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = [
    "compression-gzip",
    "compression-zstd",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
urlencoding = "2.1.3"
validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
